# add_library(topology topology.cpp)
# target_link_libraries(topology entity)
# add_library(topology_parser topology_parser.cpp)
# target_link_libraries(topology_parser parser topology )

# add_library(single_flow single_flow.cpp)
# target_link_libraries(single_flow entity)
# add_library(single_flow_selector_parser single_flow_selector_parser.cpp)
# target_link_libraries(single_flow_selector_parser parser single_flow)

# add_library(rule_link rule_link.cpp)
# target_link_libraries(rule_link entity)
# add_library(rule_link_parser rule_link_parser.cpp)
# target_link_libraries(rule_link_parser parser rule_link)
add_subdirectory(topology_parser)
add_subdirectory(single_flow_parser)
add_subdirectory(rule_link_parser)
add_subdirectory(anomaly_parser)
add_subdirectory(localization_parser)
add_subdirectory(single_flow_probe_parser)
add_subdirectory(aggregated_flow_probe_parser)
add_subdirectory(constraint_parser)
add_subdirectory(aggregated_flow_parser)

